--- a/modules/gateway/assertions/SamlpAssertion/src/main/java/com/l7tech/external/assertions/samlpassertion/console/resources/SubjectConfirmationNameIdentifierWizardStepPanel.form
+++ b/modules/gateway/assertions/SamlpAssertion/src/main/java/com/l7tech/external/assertions/samlpassertion/console/resources/SubjectConfirmationNameIdentifierWizardStepPanel.form
@@ -1,46 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.l7tech.external.assertions.samlpassertion.console.SubjectConfirmationNameIdentifierWizardStepPanel">
-  <grid id="3818" binding="mainPanel" layout-manager="GridLayoutManager" row-count="9" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="3818" binding="mainPanel" layout-manager="GridLayoutManager" row-count="6" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="65" y="52" width="516" height="365"/>
+      <xy x="65" y="52" width="516" height="541"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
       <component id="9dcec" class="javax.swing.JLabel" binding="titleLabel">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="5" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Name Identifier"/>
+          <text resource-bundle="com/l7tech/external/assertions/samlpassertion/console/SubjectConfirmationNameIdentifierWizardStepPanel" key="nameIdentiferPanel"/>
         </properties>
       </component>
-      <grid id="cec96" binding="formatsButtonPanel" layout-manager="GridBagLayout">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-        <border type="none" title="Format"/>
-        <children/>
-      </grid>
       <vspacer id="e6321">
         <constraints>
-          <grid row="8" column="1" row-span="1" col-span="4" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="1" row-span="1" col-span="2" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <hspacer id="8b420">
-        <constraints>
-          <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
       <grid id="41012" binding="valuePanel" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="7" column="1" row-span="1" col-span="4" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="1" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-        <border type="none" title="Name Identifier Value"/>
+        <border type="none" title-resource-bundle="com/l7tech/external/assertions/samlpassertion/console/SubjectConfirmationNameIdentifierWizardStepPanel" title-key="nameIdentifierValuePanel"/>
         <children>
           <component id="313ab" class="javax.swing.JRadioButton" binding="valueFromCredsRadioButton">
             <constraints>
@@ -48,7 +35,7 @@
             </constraints>
             <properties>
               <selected value="true"/>
-              <text value="From &amp;Credentials"/>
+              <text resource-bundle="com/l7tech/external/assertions/samlpassertion/console/SubjectConfirmationNameIdentifierWizardStepPanel" key="nameIdentifierFromCreds"/>
             </properties>
           </component>
           <component id="762ea" class="javax.swing.JRadioButton" binding="valueSpecifiedRadio">
@@ -56,7 +43,7 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="From &amp;Template:"/>
+              <text resource-bundle="com/l7tech/external/assertions/samlpassertion/console/SubjectConfirmationNameIdentifierWizardStepPanel" key="nameIdentifierFromTemplate"/>
             </properties>
           </component>
           <component id="8b7fe" class="javax.swing.JTextField" binding="valueTextField">
@@ -73,7 +60,7 @@
             </constraints>
             <properties>
               <selected value="false"/>
-              <text value="From Authenticated &amp;User"/>
+              <text resource-bundle="com/l7tech/external/assertions/samlpassertion/console/SubjectConfirmationNameIdentifierWizardStepPanel" key="nameIdentifierFromAuthUser"/>
             </properties>
           </component>
         </children>
@@ -81,7 +68,7 @@
       <grid id="58bbf" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="16"/>
         <constraints>
-          <grid row="5" column="1" row-span="1" col-span="4" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -92,7 +79,7 @@
             </constraints>
             <properties>
               <labelFor value="e5470"/>
-              <text value="Name &amp;Qualifier"/>
+              <text resource-bundle="com/l7tech/external/assertions/samlpassertion/console/SubjectConfirmationNameIdentifierWizardStepPanel" key="nameQualifier"/>
             </properties>
           </component>
           <component id="e5470" class="javax.swing.JTextField" binding="nameQualifierTextField">
@@ -103,36 +90,10 @@
           </component>
         </children>
       </grid>
-      <vspacer id="4ff6b">
-        <constraints>
-          <grid row="6" column="1" row-span="1" col-span="4" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-            <minimum-size width="-1" height="5"/>
-          </grid>
-        </constraints>
-      </vspacer>
-      <vspacer id="4db8c">
-        <constraints>
-          <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-            <minimum-size width="-1" height="5"/>
-          </grid>
-        </constraints>
-      </vspacer>
-      <vspacer id="7febe">
-        <constraints>
-          <grid row="4" column="1" row-span="1" col-span="4" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-            <minimum-size width="-1" height="5"/>
-          </grid>
-        </constraints>
-      </vspacer>
-      <hspacer id="f11d7">
-        <constraints>
-          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
       <grid id="2671d" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -143,7 +104,7 @@
             </constraints>
             <properties>
               <selected value="true"/>
-              <text value="&amp;Include Name Identifier"/>
+              <text resource-bundle="com/l7tech/external/assertions/samlpassertion/console/SubjectConfirmationNameIdentifierWizardStepPanel" key="includeNameIdentifier"/>
             </properties>
           </component>
           <component id="907c3" class="javax.swing.JCheckBox" binding="encryptNameIdentifierCheckBox" default-binding="true">
@@ -151,7 +112,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Encrypt Name Identifier&#10;"/>
+              <text resource-bundle="com/l7tech/external/assertions/samlpassertion/console/SubjectConfirmationNameIdentifierWizardStepPanel" key="encryptNameIdentifier"/>
             </properties>
           </component>
           <component id="d164e" class="javax.swing.JButton" binding="configureEncryptionButton">
@@ -159,11 +120,92 @@
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Configure"/>
+              <text resource-bundle="com/l7tech/external/assertions/samlpassertion/console/SubjectConfirmationNameIdentifierWizardStepPanel" key="configure"/>
             </properties>
           </component>
         </children>
       </grid>
+      <grid id="83185" binding="formatsButtonPanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none" title-resource-bundle="com/l7tech/external/assertions/samlpassertion/console/SubjectConfirmationNameIdentifierWizardStepPanel" title-key="formatPanel"/>
+        <children>
+          <component id="90f1e" class="javax.swing.JRadioButton" binding="automaticButton">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text resource-bundle="com/l7tech/external/assertions/samlpassertion/console/SubjectConfirmationNameIdentifierWizardStepPanel" key="formatAutomatic"/>
+            </properties>
+          </component>
+          <component id="390eb" class="javax.swing.JRadioButton" binding="x509SubjectNameButton">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text resource-bundle="com/l7tech/external/assertions/samlpassertion/console/SubjectConfirmationNameIdentifierWizardStepPanel" key="formatX509"/>
+            </properties>
+          </component>
+          <component id="bf465" class="javax.swing.JRadioButton" binding="emailAddressButton">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text resource-bundle="com/l7tech/external/assertions/samlpassertion/console/SubjectConfirmationNameIdentifierWizardStepPanel" key="formatEmailAddress"/>
+            </properties>
+          </component>
+          <component id="2a1c1" class="javax.swing.JRadioButton" binding="windowsDomainQualifiedNameButton">
+            <constraints>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text resource-bundle="com/l7tech/external/assertions/samlpassertion/console/SubjectConfirmationNameIdentifierWizardStepPanel" key="formatWindowsDomain"/>
+            </properties>
+          </component>
+          <component id="28444" class="javax.swing.JRadioButton" binding="unspecifiedButton">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text resource-bundle="com/l7tech/external/assertions/samlpassertion/console/SubjectConfirmationNameIdentifierWizardStepPanel" key="formatUnspecified"/>
+            </properties>
+          </component>
+          <grid id="7fe2d" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="c2b7e" class="javax.swing.JRadioButton" binding="customIdentifierButton">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text resource-bundle="com/l7tech/external/assertions/samlpassertion/console/SubjectConfirmationNameIdentifierWizardStepPanel" key="formatCustom"/>
+                </properties>
+              </component>
+              <component id="bffb1" class="com.l7tech.gui.widgets.SquigglyTextField" binding="customFormatTextField">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+            </children>
+          </grid>
+        </children>
+      </grid>
+      <hspacer id="84424">
+        <constraints>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
     </children>
   </grid>
   <buttonGroups>
@@ -171,6 +213,14 @@
       <member id="313ab"/>
       <member id="762ea"/>
       <member id="e4701"/>
+    </group>
+    <group name="formatGroup">
+      <member id="90f1e"/>
+      <member id="390eb"/>
+      <member id="bf465"/>
+      <member id="2a1c1"/>
+      <member id="28444"/>
+      <member id="c2b7e"/>
     </group>
   </buttonGroups>
 </form>
